Fix collapsing threads
Elements having the "display" property in inline styles should be hidden with "!important".

--- a/src/less/talkPage.less
+++ b/src/less/talkPage.less
@@ -32,7 +32,7 @@ ol > .cd-replyWrapper:not(.cd-replyWrapper-hasCommentForm) {
 // that should be hidden/shown in CD (for example, texts in edit intros that are irrelevant/relevant
 // for CD).
 .action-view .cd-hide {
-  display: none;
+  display: none !important;
 }
 
 div.cd-show,
